
version 11.12.1 (2024-06-25)
    * The TokenIntrospectionRequest.parse method must throw a ParseException
      when a blank token is found (iss #470).
    * Updates to Nimbus JOSE+JWT 9.40

version 11.13 (2024-06-25)
    * TypelessToken overrides equals and hashCode.
    * The TokenRevocationRequest.parse method must throw a ParseException when
      a blank token is found (iss #471).
    * JWTAuthentication.parseClientID(Map<String,List<String>>) must correctly
      handle empty and blank client_id values (iss #472).

version 11.14 (2024-07-30)
    * Adds GrantType.getShortName method returning a short (display) name for
      the grant.

version 11.15 (2024-08-13)
    * Adds OpenID Connect Native SSO for Mobile Apps 1.0 (draft 06) support.
    * Adds TokenRequest.Builder class.
    * Removes remaining usages of deprecated HTTPRequest and HTTPResponse
      methods.
    * Switches to more efficient Objects.requireNonNull in constructors.
    * Fixes the POST implementation in
      AuthorizationRequest.toHTTPRequest(HTTPRequest.Method) (iss #476).
    * Removes specification section references in JavaDocs to reduce
      maintenance effort (iss #475).

version 11.16 (2024-08-15)
    * Adds AuthenticationResponse.getIssuer interface method.
    * Adds AuthenticationResponse.getJWTResponse interface method.
    * Adds AuthenticationResponse.getResponseMode interface method.
    * Adds AuthenticationResponse.impliedResponseMode interface method.
    * Fixes base URI (redirect_uri) extraction in AuthorizationResponse.parse,
      AuthorizationSuccessResponse.parse, AuthorizationErrorResponse.parse,
      AuthenticationResponseParser.parse, AuthenticationSuccessResponse.parse
      and AuthenticationErrorResponse.parse (iss #477).

version 11.16.1 (2024-08-16)
    * Adds extra IDTokenClaimsSet constructor "aud", "exp" and "iat" argument
      checks.

version 11.17 (2024-08-18)
    * Adds DeviceSSOScopeValue.