@@ -2474,3 +2474,5 @@ version 11.16.1 (2024-08-16)
 
 version 11.17 (2024-08-18)
     * Adds DeviceSSOScopeValue.
+    * The DeviceAuthorizationRequest should set the HTTP Accept header to
+      "application/json" (iss #451)
